<resources>
    <string name="app_name">MRApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="item_add">Add Patient</string>
    <string name="item_update">Update Patient</string>
    <string name="item_delete">Delete Patient</string>
    <string name="item_view">View Patients</string>
    <string name="item_schedule">Scheduled patients</string>
    <string name="item_logout">LOG OUT</string>

    <string name="title_activity_add_patient">AddPatient</string>
    <string name="patient_name">Patient\'s Name</string>
    <string name="patient_age">Date Of Birth</string>
    <string name="disease">Disease</string>
    <string name="prescription">Prescription</string>
    <string name="drug">Drud</string>
    <string name="returndate">Return Date</string>
    <string name="remark">Remarks</string>
    <string name="save">SAVE</string>
    <string name="home_nav">Home</string>

    <string-array name="action_list">
        <item>@string/home_nav</item>
        <item>@string/item_add</item>
        <item>@string/item_view</item>
        <item>@string/item_update</item>
        <item>@string/item_delete</item>
        <item>@string/item_schedule</item>
        <item textcolor="#CC0000">@string/item_logout</item>
    </string-array>
</resources>
