<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.mrapp.UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:id="@+id/ptextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/pedittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/ptextview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
        android:text="@string/patient_age"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/pedittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />

    <TextView
        android:id="@+id/ptextview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
        android:text="@string/disease"
        android:textSize="25sp" />
    </LinearLayout>

</FrameLayout>
