<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <android.support.v4.widget.DrawerLayout

        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="example.com.mrapp.AddPatient">

            <TextView
                android:id="@+id/ptextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptextview"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/ptextview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pedittext"
                android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
                android:text="@string/patient_age"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pedittext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptextview1"
                android:inputType="date" />

            <TextView
                android:id="@+id/ptextview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pedittext1"
                android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
                android:text="@string/disease"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pedittext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptextview2"
                android:inputType="text" />

            <TextView
                android:id="@+id/ptextview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pedittext2"
                android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
                android:text="@string/prescription"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pedittext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptextview3"
                android:inputType="textLongMessage" />

            <TextView
                android:id="@+id/ptextview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pedittext3"
                android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
                android:text="@string/drug"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pedittext4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptextview4"
                android:inputType="text" />

            <TextView
                android:id="@+id/ptextview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pedittext4"
                android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
                android:text="@string/returndate"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pedittext5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptextview5"
                android:inputType="date" />

            <TextView
                android:id="@+id/ptextview6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pedittext5"
                android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
                android:text="@string/remark"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pedittext6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptextview6"
                android:inputType="text" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pedittext6"
                android:layout_marginTop="15sp"
                android:background="@color/background_material_dark"
                android:text="@string/save"
                android:textSize="25sp" />

        </RelativeLayout>
        </ScrollView>

        <fragment
            android:id="@+id/fragment_navigation"
            android:name="example.com.mrapp.NavigationDrawerFragment"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer"
            tools:layout="@layout/fragment_navigation_drawer" />

    </android.support.v4.widget.DrawerLayout>


</LinearLayout>